[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = {path = "crates/aoc", version = "*"}

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "aoc1_bench"
harness = false

[[bench]]
name = "aoc2_bench"
harness = false

[[bench]]
name = "aoc3_bench"
harness = false

[[bench]]
name = "aoc4_bench"
harness = false

[[bench]]
name = "aoc5_bench"
harness = false

[[bench]]
name = "aoc6_bench"
harness = false

[[bench]]
name = "aoc7_bench"
harness = false

[[bench]]
name = "aoc8_bench"
harness = false

[[bench]]
name = "aoc9_bench"
harness = false